--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -13,21 +13,21 @@ ENV PYTHONUNBUFFERED 1
 COPY ./requirements.txt $APP_HOME
 
 # install dependencies
-RUN set -eux \
-    && apk add --no-cache --virtual .build-deps build-base \
-        libressl-dev libffi-dev gcc musl-dev python3-dev \
-        postgresql-dev \
-    && pip install --upgrade pip setuptools wheel \
-    && pip install -r /usr/src/app/requirements.txt \
-    && rm -rf /root/.cache/pip
+RUN set -eux
+RUN apk add --no-cache --virtual .build-deps build-base \
+    libressl-dev libffi-dev gcc musl-dev postgresql-dev python3-dev
+RUN pip install --upgrade pip setuptools wheel
+RUN pip install -r /usr/src/app/requirements.txt
+RUN rm -rf /root/.cache/pip
 
 # copy entrypoint.sh
 COPY ./entrypoint.sh $APP_HOME
 
 # copy project
 COPY . $APP_HOME
-RUN black $APP_HOME
-RUN isort $APP_HOME
+
+# RUN black /usr/src/app/app
+# RUN isort /usr/src/app/app
 
 # run entrypoint.sh
 ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
